add vuex in project and add create todo item function

--- a/src/scss/base/_reset.scss
+++ b/src/scss/base/_reset.scss
@@ -25,7 +25,7 @@ output, section, summary, audio, video {
   box-shadow: none;
   font-weight: normal;
   font-size: 100%;
-  font-family: "微軟正黑體", "Microsoft JhengHei", "arial", sans-serif;
+  font-family: "微軟正黑體", "Microsoft JhengHei", "arial", sans-serif, Helvetica, sans-serif;
 }
 
 body {
