--- a/src/scss/pages/_todolist.scss
+++ b/src/scss/pages/_todolist.scss
@@ -11,10 +11,10 @@ $bg_color: #fafafa;
 
 .todolist {
   margin: 60px auto 0;
-  width: 600px;
+  width: 90%;
+  max-width: 600px;
   [class*="fa-"] {
     color: #333;
-    margin: 4px;
     cursor: pointer;
   }
 }
@@ -128,9 +128,8 @@ $bg_color: #fafafa;
       top: 50%;
       right: 20px;
       transform: translateY(-50%);
-      .fa {
+      [class*="fa-"] {
         margin-left: 10px;
-        font-size: 18px;
         cursor: pointer;
       }
     }
